# db-course

./: .gitignore  README.md  TODOLIST
doc/: task.odt
src/: CMakeLists.txt  Dockerfile  Dockerfile.run
src/api/: api
src/api_gateway/: CMakeLists.txt  main.cpp
src/api_gateway/inc/: api_gateway_clients.h  api_gateway_handler.h  api_gateway_router.h  base_api_gateway_adapter.h  details_adapter.h  worker_dto.h  worker_names_adapter.h  workers_adapter.h
src/api_gateway/src/: api_gateway_handler.cpp  api_gateway_router.cpp  details_adapter.cpp  worker_dto.cpp  worker_names_adapter.cpp  workers_adapter.cpp
src/benchmark/: CMakeLists.txt  README.md  benchmark.sh  benchmark_report  benchmark_session.sh  benchmarker.py  handle_results.py
src/benchmark/boost_asio_on_coroutines/: CMakeLists.txt  main.cpp
src/benchmark/boost_asio_on_coroutines/conf/: dummy1.yaml
src/benchmark/boost_asio_on_coroutines/inc/: dummy_server_handler.h
src/benchmark/boost_asio_on_coroutines/src/: dummy_server_handler.cpp
src/benchmark/oatpp/: CMakeLists.txt
src/benchmark/oatpp/src/: AppComponent.hpp
src/benchmark/report/: report
src/details/: CMakeLists.txt  main.cpp
src/details/bl/: CMakeLists.txt
src/details/bl/inc/: base_details_repository.h  base_producers_repository.h  base_stock_repository.h  commands.h  detail.h  details_facade.h  producer.h  stock_controller.h  stock_detail.h  stock_log.h  stock_order.h  swaps_controller.h
src/details/bl/src/: commands.cpp  detail.cpp  details_facade.cpp  details_router.cpp  producer.cpp  stock_controller.cpp  stock_detail.cpp  stock_log.cpp  stock_order.cpp  swaps_controller.cpp
src/details/da/: CMakeLists.txt
src/details/da/inc/: postgres_stock_repository.h  postgres_swaps_repository.h
src/details/da/src/: postgres_details_repository.cpp  postgres_producers_repository.cpp  postgres_stock_repository.cpp  postgres_swaps_repository.cpp
src/details/gateway/: CMakeLists.txt
src/details/gateway/inc/: commands.h  converters.h  detail_dto.h  detail_to_stock_dto.h  details_handler.h  details_router.h  get_stock_log_dto.h  producer_data_dto.h  swaps_part_name_dto.h
src/details/gateway/src/: commands.cpp  converters.cpp  detail_dto.cpp  detail_to_stock_dto.cpp  details_handler.cpp  details_router.cpp  get_stock_log_dto.cpp  producer_data_dto.cpp  swaps_part_name_dto.cpp
src/details/inc/: base_swaps_repository.h  commands.h  detail.h  details_clients.h  details_facade.h  details_handler.h  details_router.h  postgres_details_repository.h  postgres_producers_repository.h  postgres_stock_repository.h  postgres_swaps_repository.h  producer.h
src/details/integration_tests/: CMakeLists.txt
src/details/integration_tests/conf/: test.yaml
src/details/integration_tests/inc/: detail_mother_object.h  details_facade_test.h  details_repository_test.h  producers_repository_test.h  stock_db_test_repository.h
src/details/integration_tests/src/: details_facade_test.cpp  details_repository_test.cpp  main.cpp  producers_repository_test.cpp  stock_db_test_repository.cpp
src/details/src/: commands.cpp  detail.cpp  details_facade.cpp  details_handler.cpp  details_router.cpp  postgres_details_repository.cpp  postgres_producers_repository.cpp  postgres_stock_repository.cpp  postgres_swaps_repository.cpp  producer.cpp  swaps_controller.cpp
src/details/tests_lib/: CMakeLists.txt
src/details/tests_lib/inc/: producer_mother_object.h  stock_log_data_builder.h
src/details/tests_lib/src/: producer_mother_object.cpp  stock_log_data_builder.cpp
src/details/unit_tests/: CMakeLists.txt  README.md
src/details/unit_tests/conf/: test.yaml
src/details/unit_tests/inc/: details_facade_test.h  details_repository_test.h  mock_repositories.h  stock_logs_repository_test.h  swaps_repository_test.h
src/details/unit_tests/src/: detail_mother_object.cpp  details_facade_test.cpp  details_repository_test.cpp  producers_repository_test.cpp  (+3 more)
src/dummy_client_server/: CMakeLists.txt  main.cpp
src/dummy_client_server/inc/: dummy_client_server_handler.h
src/dummy_client_server/src/: dummy_client_server_handler.cpp
src/dummy_server/: CMakeLists.txt  main.cpp
src/dummy_server/inc/: dummy_server_handler.h
src/dummy_server/src/: dummy_server_handler.cpp
src/e2e_tests/: test_e2e.py
src/net_lib/: CMakeLists.txt
src/net_lib/base/: beast_req.cpp  beast_req.h  beast_resp.cpp  beast_resp.h  client_server_req_handler.h  reqresp.cpp  reqresp.h  server_req_handler.h
src/net_lib/base_inf/: privilege_level.cpp  privilege_level.h
src/net_lib/config/: base_config.h  base_sections.h  yamlcpp_config.cpp  yamlcpp_config.h
src/net_lib/connections/: client_server_connection.cpp  client_server_connection.h  server_connection.cpp  server_connection.h
src/net_lib/coroutines_support/: http_read_awaiter.cpp  http_read_awaiter.h  http_write_awaiter.cpp  http_write_awaiter.h  read_awaiter.cpp  read_awaiter.h  std_future.hpp  write_awaiter.cpp  write_awaiter.h
src/net_lib/crypto/: encrypt_strategy.h  jwt_token_generator.cpp  jwt_token_generator.h  sha256_encrypt.cpp  sha256_encrypt.h  token_generator.h
src/net_lib/exceptions/: base_exception.h  database_exceptions.h  logic_exceptions.h  server_exceptions.h
src/net_lib/net_headers/: net.h
src/net_lib/sessions/: base_client_server_session.h  base_session.h  completition_decorator.cpp  completition_decorator.h  echo_session.cpp  echo_session.h  http_client_server_session.cpp  http_client_server_session.h  http_session.cpp  http_session.h
src/workers/: CMakeLists.txt  main.cpp
src/workers/experiment/: CMakeLists.txt  main.cpp
src/workers/inc/: base_auth_repository.h  base_workers_repository.h  commands.h  converters.h  postgres_auth_repository.h  postgres_workers_repository.h  redis_auth_repository.h  worker.h  workers_controller.h  workers_facade.h  workers_handler.h  workers_router.h
src/workers/src/: commands.cpp  converters.cpp  postgres_auth_repository.cpp  postgres_workers_repository.cpp  redis_auth_repository.cpp  worker.cpp  workers_controller.cpp  workers_facade.cpp  workers_handler.cpp  workers_router.cpp
(+200 files in other folders)
